--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "autoprefixer": "^9.7.4",
     "classnames": "^2.2.6",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^7.1.0",
+    "imagemin-svgo": "^7.1.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.0",
     "next-images": "^1.3.1",
+    "next-optimized-images": "^2.5.5",
     "postcss-import": "^12.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
